# autovalor

./: .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt  test_manual.py
api/: app.py  schemas.py
app/: __init__.py  main.py  schemas.py
app/routes/: catalog.py  health.py  identify.py  metadata.py  predict.py  score.py  scraper_api.py
app/services/: catalog_service.py  model_service.py  supabase.py  vision_service.py
ml/: build_catalog.py  feature_config.py  preprocess.py  retrain.py  train.py
models/: vehicle_catalog.json
scraper/: base.py  cli.py  patiotuerca_precios.py  patiotuerca_usados.py  supabase_schema.sql
src/: feature_config.py  train_model.py
tests/: test_api.py  test_model.py
